Bug 459212 - One of the percentage views is not translatable
Summary: One of the percentage views is not translatable
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-16 13:54 UTC by Emir SARI
Modified: 2023-04-30 21:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (83.79 KB, image/png)
2022-09-16 13:54 UTC, Emir SARI
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2022-09-16 13:54:41 UTC
Created attachment 152102 [details]
screenshot

SUMMARY

A percentage view is not translatable, therefore impossible to make it respect local rules. See the attachment. The value on the lower corner differs from the rest.

STEPS TO REPRODUCE
1.  Open Lokalize
2.  Observe the percentage view that shows the general progress on the lower right corner

OBSERVED RESULT
- In Turkish, percentage sign precedes the number. However, since this view is not translatable, it stays after the number

EXPECTED RESULT
- There should be a possibility to translate this value

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon
KDE Plasma Version: 5.25

ADDITIONAL INFORMATION
Ideally, percentage values should not be translatable at all, it should take its setting from the localisation definitions.
Comment 1 Bug Janitor Service 2023-04-02 19:35:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/36
Comment 2 Frederik Schwarzer 2023-04-30 21:12:43 UTC
Git commit e393603f886b8d44efcc0f708c92b828bad180b4 by Frederik Schwarzer, on behalf of Emir SARI.
Committed on 30/04/2023 at 21:12.
Pushed by schwarzer into branch 'master'.

Make progress bar percentage localizable

M  +1    -0    src/project/projecttab.cpp

https://invent.kde.org/sdk/lokalize/commit/e393603f886b8d44efcc0f708c92b828bad180b4