Make progress bar percentage localizable

BUG: 459212